force-app/main/default/objects/Notification_Config__mdt/Notification_Config__mdt.object-meta.xml
<CustomObject>
    <description
    >Email notification settings used by portfolio lead automation.</description>
    <label>Notification Config</label>
    <pluralLabel>Notification Configs</pluralLabel>
</CustomObject>