force-app/main/default/objects/Notification_Config__mdt/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <label>Email Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>