force-app/main/default/objects/Notification_Config__mdt/fields/Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Reply_To__c</fullName>
    <label>Reply To</label>
    <type>Email</type>
</CustomField>