force-app/main/default/objects/Notification_Config__mdt/fields/Sender_Email__c.field-meta.xml
<CustomField>
    <fullName>Sender_Email__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>